THRIFT-807 JavaScript: Initialization of Base Types with 0 instead of null

git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@1023073 13f79535-47bb-0310-9956-ffa450edef68